--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <a class="dropdown-item" href="#">Something else here</a>
     <div class="divider dropdown-divider"></div>
     <a class="dropdown-item" href="#">Separated link</a>
+    <a>Yeet</a>
   </div>
 </div>
 
