--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,2 @@
-<div class="btn-group" mdbDropdown>
-  <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle waves-light"
-    mdbWavesEffect>
-    Basic dropdown
-  </button>
-
-  <div class="dropdown-menu dropdown-primary">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-    <div class="divider dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Separated link</a>
-  </div>
-</div>
-
-<router-outlet></router-outlet>
+<h1>{{title}}</h1>
+<app-tasks></app-tasks>
