--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #fff;
+    color: #333;
+    font: 1.2em / 1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0;
+    margin: 1em;
+}
+
+.list-group {
+    list-style: none;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-radius: .5em;
+    width: 20em;
+    
+}
+
+.list-group li {
+    border-top: 1px solid #ccc;
+    padding: .5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list-group li:first-child {
+    border-top: 0;
+}
+
+.list-group .badge {
+    background-color: rebeccapurple;
+    color: #fff;
+    font-weight: bold;
+    font-size: 80%;
+    border-radius: 10em;
+    min-width: 1.5em;
+    padding: .25em;
+    text-align: center
+}
