--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,21 +1,21 @@
 <!-- <ul class="list-group">
     <li *ngFor="let task of tasks" data-bs-toggle="collapse" href="#collapseExample" aria-controls="collapseExample">{{task.name}}
         <span class="badge">{{task.exp}}</span>
-    </li>
-</ul> -->
 
-<div class="accordion" class="list-group"  id="accordionExample">
-    <div *ngFor="let task of tasks" class="accordion-item">
-      <h2 class="accordion-header" attr.id="heading{{task.name}}">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse' + task.name" aria-expanded="true" attr.aria-controls="collapse{{task.name}}">
-          {{task.name}}
-        </button>
-      </h2>
-      <div attr.id="collapse{{task.name}}" class="accordion-collapse collapse show" attr.aria-labelledby="heading{{task.name}}" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-           {{task.description}}
-        </div>
+    </li>
+    
+  </ul> -->
+<div *ngFor="let task of tasks" class="accordion" class="list-group" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        {{task.title}}
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+          {{task.description}}
       </div>
-    </div>  
+    </div>
   </div>
 </div>
