Added simple function for adding exp
Use "gainedExp" variable to calculate progress in the progressbar.
Good luck :)

--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -13,7 +13,7 @@
           <ul *ngFor="let subquest of quest.subQuests" >
             <li style="text-align: left;">
               {{subquest.description}} 
-              <button class="btn btn-success" style="float: right; margin-bottom: 10px;">Done</button>
+              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" (click)="sendExp(subquest.experience)">Done</button>
             </li>              
           </ul>         
       </div>
