Button no more margin bottom

--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -13,7 +13,7 @@
           <ul *ngFor="let subquest of quest.subQuests" >
             <li style="text-align: left;">
               {{subquest.description}} 
-              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" onclick="move()">Done</button>
+              <button class="btn btn-success" style="float: right;" onclick="move()">Done</button>
             </li>              
           </ul>         
       </div>
