--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -13,10 +13,15 @@
           <ul *ngFor="let subquest of quest.subQuests" >
             <li style="text-align: left;">
               {{subquest.description}} 
-              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" (click)="sendExp(subquest.experience)">Done</button>
+              <!--(click)="sendExp(subquest.experience)-->
+              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" onclick="move()">Done</button>
             </li>              
           </ul>         
       </div>
     </div>
   </div>  
+</div><br/>
+
+<div class="progress" style="width: 315px; margin: auto; ">
+  <div id="progressskrrt" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="1000"></div>
 </div>
