--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -14,14 +14,13 @@
             <li style="text-align: left;">
               {{subquest.description}} 
               <!--(click)="sendExp(subquest.experience)-->
-              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" onclick="move()">Exp: {{subquest.experience}}</button>
+              <button class="btn btn-success" style="float: right; margin-bottom: 10px;" (click)="updateExp(subquest.experience)">Exp: {{subquest.experience}}</button>
             </li>              
           </ul>         
       </div>
     </div>
   </div>  
 </div><br/>
-
-<div class="progress" style="width: 315px; margin: auto; ">
-  <div id="progressskrrt" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="1000"></div>
+<div class="list-group">
+  <progress-bar progress="{{gainedExp}}"></progress-bar>
 </div>
