--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -21,6 +21,6 @@
     </div>
   </div>  
 </div><br/>
-<div class="list-group">
+<div class="list-group" style="border: none; padding-bottom: 50px;">
   <progress-bar progress="{{gainedExp}}"></progress-bar>
 </div>
