--- a/src/app/quests/quests.component.css
+++ b/src/app/quests/quests.component.css
@@ -1,6 +1,36 @@
+
 .list-group {
     width: 350px;
+    list-style: none;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-radius: .5em;  
 }
+
+.list-group li {
+    border-top: 1px solid #ccc;
+    padding: .5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list-group li:first-child {
+    border-top: 0;
+}
+
+.list-group .badge {
+    background-color: rebeccapurple;
+    color: #fff;
+    font-weight: bold;
+    font-size: 80%;
+    border-radius: 10em;
+    min-width: 1.5em;
+    padding: .25em;
+    text-align: center
+}
+
 .btn {
     width: 90px;
     height: auto;
@@ -10,4 +40,10 @@
 
 .completed{
     color:grey;
+}
+
+.favicon-size
+{
+    width: 100%;
+    height: 80px;
 }
