--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,22 @@
 <div class = "container"> 
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item" >
-          <a class="nav-link" href="#" ><svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-person-circle img-size" viewBox="0 0 16 16">
+          <button (click)="login()" *ngIf= "!isLoggedIn()" class="nav-link" href="#" ><svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-person-circle img-size" viewBox="0 0 16 16">
             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
           </svg>
-        </a>
+        </button>
+        <button (click)="logout()" *ngIf= "isLoggedIn()" class="nav-link" href="#" ><svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-person-circle img-size" viewBox="0 0 16 16">
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+        </svg>
+      </button>
         </li>
       </ul>
 </div>
 
+<div *ngIf="isLoggedIn()">
+  <h3>You are logged in!</h3>
+</div>
 
 <app-quests></app-quests>
