--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class = "container"> 
+<div class = "container" style="background: #efe6f9"> 
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item" >
           <button (click)="login()" *ngIf= "!isLoggedIn()" class="nav-link" href="#" ><svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-person-circle img-size" viewBox="0 0 16 16">
