--- a/src/app/profile-details/profile-details.component.html
+++ b/src/app/profile-details/profile-details.component.html
@@ -1,1 +1,22 @@
-<p>profile-details works!</p>
+<div class="shell">
+    <img class="qrcode" src="./assets/pictures/qrcode.png" alt="qr-cde"/>
+    <div class="profiledetails">
+        Max van der Dussen<br/>
+        MaxCool@Outlook.com<br/>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100px" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+    </div>
+</div>
+<br/>
+
+<div asGlass style="height: 10%; border-radius: 20px; margin: 2%; display: block; backdrop-filter: unset;">
+    <img class="qrcode" src="./assets/pictures/qrcode.png" alt="qr-cde"/>
+    <div class="profiledetails">
+        Max van der Dussen<br/>
+        MaxCool@Outlook.com<br/>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100px" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+    </div>
+</div>
