--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <meta name="referrer" content="unsafe-url">
 <app-microsoft-login></app-microsoft-login>
 <app-quests></app-quests>
+<app-registration></app-registration>
