--- a/src/app/microsoft-login/microsoft-login.component.html
+++ b/src/app/microsoft-login/microsoft-login.component.html
@@ -1,3 +1,4 @@
+<meta name="referrer" content="unsafe-url">
 <div class = "container"> 
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item" >
