profile details and badges

--- a/src/app/badges/badges.component.html
+++ b/src/app/badges/badges.component.html
@@ -1,1 +1,46 @@
-<p>Badges work!</p>
+<div class="shell">
+    <table>
+        <tr>
+            <td>
+                <div class="achievement">
+                    <span class="helper"></span>
+                    <img src="./assets/pictures/coffee_achievement.png" alt="coffee_achievement"/>
+                </div>
+            </td>
+            <td>
+                <div class="achievement">
+                    <span class="helper"></span>
+                    <img src="./assets/pictures/beer_achievement.png" alt="coffee_achievement"/>
+                </div>
+            </td>
+            <td>
+                <div class="achievement">
+                    <span class="helper"></span>
+                    <img src="./assets/pictures/colleague_achievement.png" alt="coffee_achievement"/>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="achievement"></div>
+            </td>
+            <td>
+                <div class="achievement"></div>
+            </td>
+            <td>
+                <div class="achievement"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="achievement"></div>
+            </td>
+            <td>
+                <div class="achievement"></div>
+            </td>
+            <td>
+                <div class="achievement"></div>
+            </td>
+        </tr>
+    </table>
+</div>
