--- a/src/app/profile-details/profile-details.component.css
+++ b/src/app/profile-details/profile-details.component.css
@@ -1,10 +1,13 @@
 .shell{
     height: 10%;
     background: rgba(255, 255, 255, 0.199);
-    border-radius: 20px;
-    box-shadow: 0px 5px 5px -5px #000000;
+    border-radius: 10px;
     margin: 2%;
+    margin-top: 5%;
     display: block;
+    backdrop-filter: none;
+    box-shadow: rgba(31, 38, 135, 0.37) 0px 8px 32px 0px; 
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .qrcode{
