--- a/src/app/quests/quests.component.css
+++ b/src/app/quests/quests.component.css
@@ -4,12 +4,11 @@
     list-style: none;
     margin: auto;
     padding: 0;
-    border: 1px solid #ccc;
-    border-radius: .5em;  
+    border: 0px solid #ccc;
 }
 
 .list-group li {
-    border-top: 1px solid #ccc;
+    border-top: 0px solid #ccc;
     padding: .5em;
     display: flex;
     justify-content: space-between;
@@ -63,3 +62,8 @@ header section {
     width: 100%;
     height: 80px;
 }
+
+:focus:not(:focus-visible) {
+    outline: 0;
+    box-shadow: none;
+  }
