--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header text-center">
     <div class="logodiv">
         <img class="logo" src="./assets/pictures/Taxmodel_logo.jpg" alt="logo"/>
     </div>
