--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,13 @@
-body{
+/* body{
     height: 812px;
     background: linear-gradient(154deg, #4758F3 -2.45%, rgba(243, 129, 245, 0.49) 60.55%, rgba(255, 237, 70, 0.53) 104.6%);
-}
+} */
 
 .header{
     background: rgba(255, 255, 255, 0.7);
     height: 10%;
     width: 100%;
+    text-align: center;
 }
 
 .logodiv{
@@ -32,25 +33,30 @@ body{
     cursor: pointer;
   }
 
-.pill{
+.pillshell{
     display: inline-block;
     padding-left: 10%;
 }
 
-.questpill{
+.pill{
+    color: black;
+    position: relative;
     font-weight: bold;
     display: inline-block;
     width: 120px;
-    border-radius: 15px;
+    border-radius: 15px;    
+    margin-right: -20px;
+    z-index: 0;
 }
 
-.profilepill{
+.activepill{
+    
     background: gray;
     color: white;
     font-weight: bold;
     display: inline-block;
     width: 120px;
     border-radius: 15px;
-    margin-left: -20px;
+    z-index: 1;
 }
 
