--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <header style="min-height: 87.2vh; background: linear-gradient(154deg, #4758F3 -2.45%, rgba(243, 129, 245, 0.49) 60.55%, rgba(255, 237, 70, 0.53) 104.6%);">
   <h1 class="center" style="padding-bottom: 30px;">{{greeting}} user!</h1>
   <h2 class="center">Quests</h2>
