--- a/src/app/microsoft-login/microsoft-login.component.html
+++ b/src/app/microsoft-login/microsoft-login.component.html
@@ -2,7 +2,7 @@
 <div class = "container"> 
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item" >
-            <img class="tm-logo" src="./assets/pictures/Taxmodel_logo.jpg"width="222" height="200">
+            <img class="tm-logo" src="./assets/pictures/Taxmodel_logo.jpg"width="200" height="200">
         </li>
       </ul>
 </div>
@@ -15,7 +15,7 @@
     <div class="btnContainer">
       <div class="row">
         <div class="col text-center">
-          <button (click)="login()" *ngIf="!logincheck" type="button" class="btn btn-primary btn-lg" href="#">             
+          <button (click)="login()" *ngIf="!logincheck" type="button" class="btn btn-primary btn-lg buttoncolor" href="#">             
             <img class="mc-logo" src="./assets/pictures/mc-logo.png"width="30" height="30">
             Microsoft Login</button>
           <button (click)="logout()" *ngIf="logincheck" type="button" class="btn btn-primary btn-lg" href="#">Logout</button>
