--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <img class="logo" src="./assets/pictures/Taxmodel_logo.jpg" alt="logo"/>
     </div>
     <div class="pillshell">
-        <button class="button pill" [ngClass]="{'activepill': activequests}" (click)="active('quests')" [routerLink]="['/Quests']" >Quests</button>
-        <button class="button pill" [ngClass]="{'activepill': activeprofile}" (click)="active('profile')" [routerLink]="['/Profile']">Profile</button>
+        <button class="button pill activepill" [routerLink]="['/quests']" >Quests</button>
+        <button class="button pill" [routerLink]="['/profile']">Profile</button>
     </div>
 </div>
