--- a/src/app/quests/quests.component.html
+++ b/src/app/quests/quests.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 
-  <h1 class="center text-white" style="padding-bottom: 40px; padding-bottom: 40px;">{{greeting}} user!</h1>
+  <h1 class="center text-white" style="padding-bottom: 40px; padding-top: 40px;">{{greeting}} user!</h1>
   <h2 class="center text-white" style="margin-bottom: 2%;">Quests</h2>
   
   
