--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@
 .header{
     position: sticky;
     top: 0;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgb(226, 215, 233);
     height: 10%;
     width: 100vw;
     text-align: center;
