--- a/src/app/microsoft-login/microsoft-login.component.html
+++ b/src/app/microsoft-login/microsoft-login.component.html
@@ -2,7 +2,7 @@
 <div class = "container"> 
     <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item" >
-            <img class="tm-logo" src="./assets/pictures/Taxmodel_logo.jpg"width="200" height="200">
+            <img class="corporation-logo" src="./assets/pictures/Taxmodel_logo.jpg"width="200" height="200">
         </li>
       </ul>
 </div>
