--- a/src/app/badges/badges.component.css
+++ b/src/app/badges/badges.component.css
@@ -8,18 +8,22 @@
     backdrop-filter: none;
     box-shadow: rgba(31, 38, 135, 0.37) 0px 8px 32px 0px; 
     border: 1px solid rgba(255, 255, 255, 0.18);
+    overflow-x: hidden;
 }
 
 .achievement{
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     margin: auto;
     border-radius: 50%;
     background: rgb(59,59,120);
     background: linear-gradient(323deg, rgba(59,59,120,0.3) 16%, rgba(104,230,255,0.3) 100%);
     text-align: center;
     vertical-align: middle;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
+
 
 .helper {
     display: inline-block;
@@ -27,7 +31,3 @@
     vertical-align: middle;
 }
 
-table{
-    width: 100%;
-    height: 100%;
-}
