--- a/src/app/badges/badges.component.html
+++ b/src/app/badges/badges.component.html
@@ -4,7 +4,7 @@
            <div class="col-4" *ngFor="let badge of badges; let index = index">
             <div class="achievement">
                 <span class="helper"></span>
-                <i class="bi bi-{{badge.name}}" style="font-size: 2rem;"></i>
+                <i class="bi bi-{{badge.name}}" style="font-size: 10vw;"></i>
             </div>
            </div>
         </div>
