scrollbar en routing

--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -1,5 +1,4 @@
-<div asGlass [borderRadius]=9>
-
+<div>
     <div class="accordion list-group"  id="accordionExample">
         <div *ngFor="let achievement of achievements" class="accordion-item"  style="background-color: transparent;">
             <div  class="accordion-header" attr.id="heading{{achievement.name}}"  asGlass [borderRadius]=9 >
