--- a/src/app/badges/badges.component.css
+++ b/src/app/badges/badges.component.css
@@ -1,5 +1,25 @@
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+
 .shell{
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 55%;
