--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -1,3 +1,19 @@
+
+.shell{
+    justify-content: center;
+    align-items: center;
+    height: 55%;
+    background: rgba(255, 255, 255, 0.199);
+    border-radius: 10px;
+    margin: 2%;
+    margin-top: 2%;
+    display: block;
+    backdrop-filter: none;
+    box-shadow: rgba(31, 38, 135, 0.37) 0px 8px 32px 0px; 
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    overflow-x: hidden;
+}
+
 ul 
 {
     padding-left: 0px;
