--- a/src/app/badges/badges.component.css
+++ b/src/app/badges/badges.component.css
@@ -5,12 +5,13 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: transparent; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888; 
+  border-radius: 20px;
 }
 
 /* Handle on hover */
