--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <img class="logo" src="./assets/pictures/Taxmodel_logo.jpg" alt="logo"/>
     </div>
     <div class="pillshell">
-        <a class="button pill" [routerLink]="['/quests']" routerLinkActive="activepill" >Quests</a>
-        <a class="button pill" [routerLink]="['/profile']" routerLinkActive="activepill">Profile</a>
+        <a class="button pill" routerLink="/quests" routerLinkActive="activepill">Quests</a>
+        <a class="button pill" routerLink="/profile" routerLinkActive="activepill">Profile</a>
     </div>
 </nav>
