Registrate in login screen. redirected after :+1:

--- a/src/app/Registration/registration.component.html
+++ b/src/app/Registration/registration.component.html
@@ -9,7 +9,7 @@
       <form ngNativeValidate #userForm="ngForm">
         <div class="form-group text-center text-dark" >
           <h4>Who is that pokemon!?</h4><br>
-          <input required class="form-control" placeholder="Please enter a username" type="text" id="username" name="username" ngModel>
+          <input required maxlength="25" class="form-control" placeholder="Please enter a username" type="text" id="username" name="username" ngModel>
         </div>
       </form>
     </div>
