The username is displayed on the logout page
Dit was een test om te kijken hoe properties werken binnen angular zodat we data vanuit code kunnen weergeven.

--- a/FrontEnd/src/app/microsoft-login/microsoft-login.component.html
+++ b/FrontEnd/src/app/microsoft-login/microsoft-login.component.html
@@ -19,6 +19,7 @@
             <img class="mc-logo" src="./assets/pictures/mc-logo.png"width="30" height="30">
             Microsoft Login</button>
           <button (click)="logout()" *ngIf="logincheck" type="button" class="btn btn-primary btn-lg" href="#">Logout</button>
+          <h1 *ngIf="logincheck" >{{name}}</h1>
         </div>
       </div>
     </div>
