Changed the way quests are shown and some CSS changes

--- a/FrontEnd/src/app/quests/quests.component.html
+++ b/FrontEnd/src/app/quests/quests.component.html
@@ -31,7 +31,8 @@
             </button>
           </li>
         </ul>
-        {{quest.description}}
+        <div style="color: #36393F">{{quest.description}}</div>
+        <div style="text-align: end; color: #5865F2">{{quest.points}}</div>
       </div>
     </div>
   </div>
