Generates User QR code, dynamically

--- a/FrontEnd/src/app/profile-details/profile-details.component.html
+++ b/FrontEnd/src/app/profile-details/profile-details.component.html
@@ -2,8 +2,8 @@
 </button>
 
 <div class="shell">
-    <qr-code class="qrcode" [value]="'{{user.username}}'" [size]=75></qr-code>
-    <div class="profiledetails">
+    <qr-code class="qrcode" [value]=href [size]=90></qr-code>
+    <div class="profile-details">
         {{user.username}}<br/>
         {{user.email}}<br/>
         <div class="progress">
