--- a/FrontEnd/src/app/profile-public/profile-public.component.css
+++ b/FrontEnd/src/app/profile-public/profile-public.component.css
@@ -9,3 +9,12 @@
   box-shadow: rgba(31, 38, 135, 0.37) 0px 8px 32px 0px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
+.profile-details{
+  font-weight: bold;
+  font-size: larger;
+  color: white;
+  margin-left: 2%;
+  vertical-align: middle;
+  display: inline-block;
+}
