print en download functie QR code klaar voor review

--- a/FrontEnd/src/app/profile-details/profile-details.component.html
+++ b/FrontEnd/src/app/profile-details/profile-details.component.html
@@ -2,7 +2,9 @@
 </button>
 
 <div class="shell">
-    <qr-code class="qrcode" [value]="'{{user.username}}'" [size]=75></qr-code>
+    <p id="pdf">
+    <qr-code class="qrcode" [value]="'{{user.username}}'" [size]=75 level="H"></qr-code>
+    </p>
     <div class="profiledetails">
         {{user.username}}<br/>
         {{user.email}}<br/>
