Added QR scan library, a button to scan and the scanning itself

--- a/FrontEnd/src/app/header/header.component.css
+++ b/FrontEnd/src/app/header/header.component.css
@@ -21,7 +21,7 @@
 }
 
 .button {
-    background-color: rgb(240, 239, 239);
+    background-color: #F0EFEF;
     border: none;
     color: black;
     text-align: center;
