--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -2,6 +2,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
 
 body{
