Added some CSS changes to the modal

--- a/FrontEnd/src/app/Scanner/scanner-modal.component.html
+++ b/FrontEnd/src/app/Scanner/scanner-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Scan</h2>
+<h2 mat-dialog-title>Scan QR Code</h2>
 <div>
   <div class="scan-dropdown">
     <mat-form-field>
@@ -17,5 +17,5 @@
   </zxing-scanner>
 </div>
 <mat-dialog-actions>
-  <button mat-dialog-close>Cancel</button>
+  <button mat-dialog-close class="dialog-close">Cancel</button>
 </mat-dialog-actions>
