Added a button for getting new Quests

--- a/FrontEnd/src/app/quests/quests.component.html
+++ b/FrontEnd/src/app/quests/quests.component.html
@@ -45,6 +45,15 @@
 </div>
 </div><br/>
 
+<div class="bottom-btn-group">
+  <button
+  class="scan-btn"
+  type="button"
+  (click)="ScanQRBtnClickNew()">
+    Scan for new Quests
+  </button>
+</div>
+
 <!-- <div class="list-group" style="border: none; padding-bottom: 50px;">
   <progress-bar progress="{{gainedExp}}"></progress-bar>
 </div> -->
