--- a/FrontEnd/src/app/quests/quests.component.css
+++ b/FrontEnd/src/app/quests/quests.component.css
@@ -101,3 +101,23 @@ header section {
   flex-basis: 100%;
   height: 0;
 }
+
+.bottom-btn-group {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  padding: 1rem;
+}
+
+.scan-btn {
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  width: 230px;
+  height: 60px;
+}
+
+.scan-btn:hover {
+  background-color: gray;
+  color: white;
+}
